# upstream-ndscan

./: .gitignore  pyproject.toml  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: package.yml  test.yml
conda/ndscan/: meta.yaml
conda/ndscan-dashboard/: meta.yaml
ndscan/: dataset_janitor.py  utils.py
ndscan/dashboard/: argument_editor.py
ndscan/experiment/: default_analysis.py  entry_point.py  fragment.py  parameters.py  scan_runner.py  subscan.py  utils.py
ndscan/interfaces/: __init__.py  analysis.py  annotations.py  common.py  parameters.py  results.py  utils.py
ndscan/plots/: annotation_items.py  annotations.py  image_2d.py  utils.py  xy_1d.py
ndscan/plots/model/: __init__.py  subscriber.py
test/: test_experiment_parameters.py
