[tool.poetry]
name = "ndscan"
version = "0.3.0"
description = "Composable experiment fragments and multidimensional scans for ARTIQ"
authors = ["David Nadlinger"]
license = "LGPLv3+"

[[tool.poetry.source]]
name = "oxionics"
url = "http://pypi.oxionics.com:3141/oiuser/oxionics/+simple/"
default = true

[tool.poetry.dependencies]
python = "~3.8"
sipyco = "^1.2.42"
h5py = "^3.6.0"
artiq = "^8.0.46"
pyqtgraph = "^0.12.3"
qasync = "^0.23.0"
oitg = "^0.2.90"
pyqt5 = "^5.15.6"
pyqt5-qt5 = "^5.15.2"
pyqt5-sip = "^12.10.1"
opentelemetry-api = "^1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
yapf = "^0.32.0"

[tool.poetry.scripts]
ndscan_show = "ndscan.show:main"
ndscan_dataset_janitor = "ndscan.dataset_janitor:main"

[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = "{{ base }}.{{ distance }}+g{{ commit }}"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
fmt = "yapf -i -r examples ndscan test"
fmt-test = "yapf -d -r examples ndscan test"
flake = "flake8 examples ndscan test"
test = "python -m unittest discover -v test"
